# thumbnail-maker

./: README.md  pyproject.toml
scripts/: install.sh
thumbnail_maker/: __init__.py
